# dionisio-marcelo-maia

dionisio/: README.md  pyproject.toml
dionisio/deploy/neo4j-browser/: Dockerfile  docker-entrypoint-dionisio.sh  index.html  proxy.py  railway.toml
dionisio/evals/: __init__.py  cases.json  run_evals.py
dionisio/src/dionisio_agent/: __init__.py  agent.py  agent_runner.py  api_client.py  approval.py  cli.py  config.py  factory.py  operation_catalog.py  sessions.py  tools.py  web.py
dionisio/src/dionisio_agent/graphrag/: __init__.py  builder.py  constants.py  embeddings.py  ingest.py  models.py  retriever.py
