[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dionisio-revops-agent"
version = "0.1.0"
description = "OpenAI Agents SDK assistant for the Dionisio RevOps case, using OpenRouter and a guarded API executor."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "jsonschema>=4.22",
  "neo4j>=5.23",
  "neo4j-graphrag>=1.17",
  "openai>=2.19,<3",
  "openai-agents>=0.3",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[project.scripts]
dionisio-agent = "dionisio_agent.cli:main"
dionisio-evals = "evals.run_evals:main"
dionisio-graphrag-ingest = "dionisio_agent.graphrag.ingest:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dionisio_agent", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "live_agent: integration tests that call the real LLM and Dionisio API",
]
